# module-agent

./: .gitignore  README.md  pyproject.toml
src/module_agent/: __init__.py
src/module_agent/agents/: base.py  examples.py  modules.py
src/module_agent/core/: contracts.py  models.py  orchestrator.py  sandbox.py
src/module_agent/io/: voice.py
src/module_agent/llm/: clients.py
src/module_agent/platform/: app.py
tests/: test_orchestration.py
